@@ -79,6 +79,7 @@
             Fix `parseInt("0b",16)` as well as some other non-compliant behaviour (fix #1722)
             Bangle.js: Disable touch buttons if screen off
             Bangle.js: Don't send 'up' event for a button that was used to wake the screen
+            Bangle.js: GPS event.time set to undefined if GPS time is not initialised
 
      2v04 : Allow \1..\9 escape codes in RegExp
             ESP8266: reading storage is not working for boot from user2 (fix #1507)
